--- a/19.09.2022/AboutMe.html
+++ b/19.09.2022/AboutMe.html
@@ -34,7 +34,7 @@
 
     <h1 style="color: blue; text-align: center"> Немного обо мне.</h1>
 
-    <p>Когда я высплюсь, то примерно вот так.</p>
+    <p>Когда я высплюсь, то я выгляжу примерно так.</p>
     <img src="https://i.gifer.com/origin/37/37e93cff4df7b76d41ebb0cf12669bd2.gif" alt="Я когда высплюсь" width="400"
         height="270">
 
